--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /IntregralSolution/.vs/IntregralSolution/v16/Server/sqlite3/storage.ide-wal
+/IntregralSolution/.vs/IntregralSolution/v16/Server/sqlite3/storage.ide-shm
+/IntregralSolution/.vs/IntregralSolution/v16/Server/sqlite3/storage.ide
+/IntregralSolution/.vs/IntregralSolution/v16/Server/sqlite3/db.lock
+/.vs/slnx.sqlite
